<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditActivity"
    android:background="@color/pastel_blue">

    <TextView
        android:id="@+id/tv_Credit_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_credit_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50px" />

    <TextView
        android:id="@+id/tv_Credit_info"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:text="@string/msg_credit_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_Credit_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50px"
        android:singleLine="false"
        />

    <Button
        android:id="@+id/btnMailto"
        android:layout_width="700px"
        android:layout_height="100px"
        android:text="@string/btn_credit_contact"
        android:backgroundTint="@color/pastel_green"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_Credit_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40px"
        />


    <TextView
        android:id="@+id/tv_Languaje_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_languaje_selection"
        app:layout_constraintTop_toBottomOf="@+id/btnMailto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50px" />

    <LinearLayout
        android:id="@+id/ll_Language_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_Languaje_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10px">

        <Button
            android:id="@+id/btnEs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languaje_es"
            android:layout_marginRight="100px"
            android:backgroundTint="@color/pastel_green"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languaje_en"
            android:backgroundTint="@color/pastel_green"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_credit_volver"
        android:layout_width="400px"
        android:layout_height="150px"
        android:text="@string/btn_goBack"
        android:textSize="20sp"
        android:backgroundTint="@color/pastel_green"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50px"/>

</androidx.constraintlayout.widget.ConstraintLayout>
