<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pastel_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_main_welcome"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="20px" />

        <ImageView
            android:layout_width="600px"
            android:layout_height="600px"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_Main_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_main_hint"
            android:maxLength="50"
            android:inputType="text"
            android:layout_marginTop="60px"
            android:layout_marginStart="50px"
            android:layout_marginEnd="50px" />

        <TextView
            android:id="@+id/tv_main_advise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/pastel_yellow"
            />

        <Button
            android:id="@+id/btn_Main_goto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_goto"
            android:layout_marginTop="20px"
            android:backgroundTint="@color/pastel_green"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
